# ball-chaser-bot

./: .gitignore  LICENSE  README.md
ball_chaser/: CMakeLists.txt  package.xml
ball_chaser/launch/: ball_chaser.launch
ball_chaser/scripts/: process_image_opencv.py
ball_chaser/src/: drive_bot.cpp  process_image.cpp
ball_chaser_bot/: CMakeLists.txt  package.xml
my_robot/: CMakeLists.txt  package.xml
my_robot/launch/: my_robot.rviz  robot_description.launch  world.launch
my_robot/models/ball_blue/: model.config  model.sdf
my_robot/models/ball_gray/ball_gray/: model.config  model.sdf
my_robot/models/ball_green/: model.config  model.sdf
my_robot/models/ball_red/: model.config  model.sdf
my_robot/models/ball_white/: model.config  model.sdf
my_robot/models/my_ball/: model.sdf
my_robot/models/my_ball_2/: model.config  model.sdf
my_robot/models/my_building/: model.config  model.sdf
my_robot/urdf/: materials.urdf  my_robot.gazebo  my_robot.xacro
my_robot/worlds/: empty.world  my_world.world
