<?xml version="1.0"?>
<package format="2">
  <name>ball_chaser</name>
  <version>1.0.0</version>
  <description>
      Package containing the nodes for ball detection and sending drive commands to a wheel robot.
  </description>

  <author email="gsotirch@gmail.com">George Sotirchos</author>
  <maintainer email="gsotirch@gmail.com">George Sotirchos</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/7555G/ball-chaser-bot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
